# 3ds_toolkit

./: CMakeLists.txt  LICENSE
cgfxview/: CMakeLists.txt  main.cpp
cgfxview/source/: main.cpp
common/formats/: cgfx.h
libcgfx/: CMakeLists.txt
libcgfx/include/: formatTypes.h
libcgfx/include/formats/: CGFX.h
libcgfx/include/formatters/: CGFX.h
libcgfx/include/utils/: endian.h  exceptions.h
libcgfx/source/formatters/: CGFX.cpp  CMDL.cpp  DICT.cpp  TXOB.cpp  vecmat.cpp
libcgfx/source/utils/: endian.cpp
